# pytater

./: .gitignore  404.html  README.md  changelog.md  hacking.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  readme-sox.md  readme-ydotool.md  readme.rst
.github/workflows/: docs.yml  python-package.yml  test.yml
docs/reference/: config.md  download_model.md  index.md  main.md  utilities.md  vosk.md
docs/reference/cli/: _common.md  begin.md  cancel.md  download.md  end.md  index.md  resume.md  suspend.md
docs/reference/post_processors/: _example.md  full_sentence.md  index.md  numbers.md
docs/reference/simulate_input/: dotool.md  index.md  stdout.md  wtype.md  xdotool.md  ydotool.md
explanation/: index.html
how-to-guides/: index.html
package/: README.md
package/guix/: README.md
package/python/: README.md
reference/: index.html
reference/cli/: index.html
reference/cli/_common/: index.html
reference/cli/begin/: index.html
reference/cli/cancel/: index.html
reference/cli/download/: index.html
reference/cli/end/: index.html
reference/cli/resume/: index.html
reference/cli/suspend/: index.html
reference/config/: index.html
reference/download_model/: index.html
reference/main/: index.html
reference/post_processors/: index.html
reference/post_processors/_example/: index.html
reference/post_processors/full_sentence/: index.html
reference/post_processors/numbers/: index.html
reference/simulate_input/: index.html
reference/simulate_input/dotool/: index.html
reference/simulate_input/stdout/: index.html
reference/simulate_input/wtype/: index.html
reference/simulate_input/xdotool/: index.html
reference/simulate_input/ydotool/: index.html
reference/utilities/: index.html
reference/vosk/: index.html
src/: config.py  download_model.py  nerd_dictation.py
src/nerd_dictation/: config.py  download_model.py  main.py
src/nerd_dictation/cli/: __init__.py  _common.py  begin.py  cancel.py  download.py  end.py  resume.py  suspend.py
src/nerd_dictation/post_processors/: __init__.py  full_sentence.py  numbers.py
src/nerd_dictation/simulate_input/: dotool.py
src/pytater/: __init__.py  config.py  download_model.py  main.py  manage_models.py  utilities.py  vosk.py
src/pytater/cli/: __init__.py  _common.py  begin.py  cancel.py  download.py  end.py  resume.py  suspend.py
src/pytater/post_processors/: __init__.py  _example.py  _load.py  full_sentence.py  numbers.py
src/pytater/simulate_input/: __init__.py  dotool.py  stdout.py  wtype.py  xdotool.py  ydotool.py
test/: from_words_to_digits.py  test_config.py  test_download_model.py  test_utilities.py  test_vosk.py
test/cli/: _common_test.py  test_begin.py  test_cancel.py  test_download.py  test_end.py  test_resume.py  test_suspend.py
test/post_processors/: __init__test.py  test_full_sentence.py  test_numbers.py
tutorials/: index.html
