[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'pytater'
version = '0.1.0'
requires-python = '>=3.6.2'
description = 'Offline speech to text using VOSK. Based on nerd-dictation.'
readme = 'README.md'
keywords = ['voice', 'dictation', 'vosk', 'speech-to-text', 'speech', 'text']
license = "GPL-2.0-or-later"
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Adaptive Technologies",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
license-files = ["LICENSE"]
authors = [
    { name = "Campbell Barton", email = "ideasman42@gmail.com" },
    { name = "Paul Hartman", email = "contact@paulhartman.dev" },
]
maintainers = [
    { name = "Paul Hartman", email = "contact@paulhartman.dev" },
]
dependencies = ["platformdirs>=2.4.0", "vosk>=0.3.45"]

[project.scripts]
pytater = 'pytater:main_cli'

[project.urls]
Homepage = 'https://github.com/paul-c-hartman/pytater'
Repository = 'https://github.com/paul-c-hartman/pytater'
Issues = 'https://github.com/paul-c-hartman/pytater/issues'

[tool.black]
line-length = 119
target-version = ['py310']

[tool.pylint.'MESSAGES CONTROL']
disable = [
    'C0103',
    'C0111',
    'C0301',
    'C0302',
    'C0415',
    'E0401',
    'E0611',
    'I1101',
    'R0801',
    'R0902',
    'R0903',
    'R0912',
    'R0913',
    'R0914',
    'R0915',
    'R1705',
    'W0212',
    'W0703',
]

[tool.pylint.master]
ignore = ["build", "dist", "nerd_dictation.egg-info"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = ["black>=22.8.0", "pylint>=2.13.9", "pytest>=7.0.1"]
